[workspace]
# Use the newer version of the cargo resolver
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
members  = ["crates/*", "xtask/bench", "xtask/codegen", "xtask/coverage", "xtask/libs_bench", "xtask/rules_check"]
resolver = "2"

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
dead_code                              = "warn"
trivial_numeric_casts                  = "warn"
unused_import_braces                   = "warn"
unused_lifetimes                       = "warn"
unused_macro_rules                     = "warn"

[workspace.lints.clippy]
cargo_common_metadata   = "allow"
empty_docs              = "allow" # there are some false positives inside biome_wasm
multiple_crate_versions = "allow"

# pedantic
assigning_clones             = "warn"
checked_conversions          = "warn"
cloned_instead_of_copied     = "warn"
copy_iterator                = "warn"
dbg_macro                    = "warn"
doc_link_with_quotes         = "warn"
empty_enum                   = "warn"
expl_impl_clone_on_copy      = "warn"
explicit_into_iter_loop      = "warn"
filter_map_next              = "warn"
flat_map_option              = "warn"
fn_params_excessive_bools    = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone               = "warn"
implicit_hasher              = "warn"
index_refutable_slice        = "warn"
inefficient_to_string        = "warn"
invalid_upcast_comparisons   = "warn"
iter_filter_is_ok            = "warn"
iter_not_returning_iterator  = "warn"
large_stack_arrays           = "warn"
large_types_passed_by_value  = "warn"
macro_use_imports            = "warn"
manual_is_variant_and        = "warn"
manual_ok_or                 = "warn"
manual_string_new            = "warn"
map_flatten                  = "warn"
map_unwrap_or                = "warn"
mismatching_type_param_order = "warn"
mut_mut                      = "warn"
naive_bytecount              = "warn"
needless_bitwise_bool        = "warn"
needless_continue            = "warn"
needless_for_each            = "warn"
no_effect_underscore_binding = "warn"
option_as_ref_cloned         = "warn"
ref_binding_to_reference     = "warn"
ref_option_ref               = "warn"
single_char_pattern          = "warn"
stable_sort_primitive        = "warn"
str_split_at_newline         = "warn"
unnecessary_box_returns      = "warn"
unnecessary_join             = "warn"
unnested_or_patterns         = "warn"
unreadable_literal           = "warn"
verbose_bit_mask             = "warn"
zero_sized_map_values        = "warn"

# restriction
cfg_not_test                      = "warn"
empty_drop                        = "warn"
empty_enum_variants_with_brackets = "warn"
float_cmp_const                   = "warn"
get_unwrap                        = "warn"
infinite_loop                     = "warn"
lossy_float_literal               = "warn"
rc_buffer                         = "warn"
rc_mutex                          = "warn"
rest_pat_in_fully_bound_structs   = "warn"
string_lit_chars_any              = "warn"
verbose_file_reads                = "warn"
# https://github.com/rustwasm/wasm-bindgen/issues/3944
#mem_forget                      = "warn"

[workspace.package]
authors    = ["Biome Developers and Contributors"]
categories = ["development-tools", "web-programming"]
edition    = "2021"
homepage   = "https://biomejs.dev/"
keywords   = ["parser", "linter", "formatter"]
license    = "MIT OR Apache-2.0"
repository = "https://github.com/biomejs/biome"

[profile.release-with-debug]
debug    = true
inherits = "release"

[workspace.dependencies]
# publish
biome_analyze                = { version = "0.5.7", path = "./crates/biome_analyze" }
biome_aria                   = { version = "0.5.7", path = "./crates/biome_aria" }
biome_aria_metadata          = { version = "0.5.7", path = "./crates/biome_aria_metadata" }
biome_console                = { version = "0.5.7", path = "./crates/biome_console" }
biome_control_flow           = { version = "0.5.7", path = "./crates/biome_control_flow" }
biome_css_analyze            = { version = "0.5.7", path = "./crates/biome_css_analyze" }
biome_css_factory            = { version = "0.5.7", path = "./crates/biome_css_factory" }
biome_css_formatter          = { version = "0.5.7", path = "./crates/biome_css_formatter" }
biome_css_parser             = { version = "0.5.7", path = "./crates/biome_css_parser" }
biome_css_semantic           = { version = "0.0.0", path = "./crates/biome_css_semantic" }
biome_css_syntax             = { version = "0.5.7", path = "./crates/biome_css_syntax" }
biome_deserialize            = { version = "0.6.0", path = "./crates/biome_deserialize" }
biome_deserialize_macros     = { version = "0.6.0", path = "./crates/biome_deserialize_macros" }
biome_diagnostics            = { version = "0.5.7", path = "./crates/biome_diagnostics" }
biome_diagnostics_categories = { version = "0.5.7", path = "./crates/biome_diagnostics_categories" }
biome_diagnostics_macros     = { version = "0.5.7", path = "./crates/biome_diagnostics_macros" }
biome_formatter              = { version = "0.5.7", path = "./crates/biome_formatter" }
biome_fs                     = { version = "0.5.7", path = "./crates/biome_fs" }
biome_graphql_analyze        = { version = "0.0.1", path = "./crates/biome_graphql_analyze" }
biome_graphql_factory        = { version = "0.1.0", path = "./crates/biome_graphql_factory" }
biome_graphql_formatter      = { version = "0.1.0", path = "./crates/biome_graphql_formatter" }
biome_graphql_parser         = { version = "0.1.0", path = "./crates/biome_graphql_parser" }
biome_graphql_semantic       = { version = "0.0.0", path = "./crates/biome_graphql_semantic" }
biome_graphql_syntax         = { version = "0.1.0", path = "./crates/biome_graphql_syntax" }
biome_grit_factory           = { version = "0.5.7", path = "./crates/biome_grit_factory" }
biome_grit_formatter         = { version = "0.0.0", path = "./crates/biome_grit_formatter" }
biome_grit_parser            = { version = "0.1.0", path = "./crates/biome_grit_parser" }
biome_grit_patterns          = { version = "0.0.1", path = "./crates/biome_grit_patterns" }
biome_grit_syntax            = { version = "0.5.7", path = "./crates/biome_grit_syntax" }
biome_html_factory           = { version = "0.5.7", path = "./crates/biome_html_factory" }
biome_html_formatter         = { version = "0.0.0", path = "./crates/biome_html_formatter" }
biome_html_parser            = { version = "0.0.1", path = "./crates/biome_html_parser" }
biome_html_syntax            = { version = "0.5.7", path = "./crates/biome_html_syntax" }
biome_js_analyze             = { version = "0.5.7", path = "./crates/biome_js_analyze" }
biome_js_factory             = { version = "0.5.7", path = "./crates/biome_js_factory" }
biome_js_formatter           = { version = "0.5.7", path = "./crates/biome_js_formatter" }
biome_js_parser              = { version = "0.5.7", path = "./crates/biome_js_parser" }
biome_js_semantic            = { version = "0.5.7", path = "./crates/biome_js_semantic" }
biome_js_syntax              = { version = "0.5.7", path = "./crates/biome_js_syntax" }
biome_json_analyze           = { version = "0.5.7", path = "./crates/biome_json_analyze" }
biome_json_factory           = { version = "0.5.7", path = "./crates/biome_json_factory" }
biome_json_formatter         = { version = "0.5.7", path = "./crates/biome_json_formatter" }
biome_json_parser            = { version = "0.5.7", path = "./crates/biome_json_parser" }
biome_json_syntax            = { version = "0.5.7", path = "./crates/biome_json_syntax" }
biome_markdown_factory       = { version = "0.0.1", path = "./crates/biome_markdown_factory" }
biome_markdown_parser        = { version = "0.0.1", path = "./crates/biome_markdown_parser" }
biome_markdown_syntax        = { version = "0.0.1", path = "./crates/biome_markdown_syntax" }
biome_yaml_factory           = { version = "0.0.1", path = "./crates/biome_yaml_factory" }
biome_yaml_parser            = { version = "0.0.1", path = "./crates/biome_yaml_parser" }
biome_yaml_syntax            = { version = "0.0.1", path = "./crates/biome_yaml_syntax" }

biome_markup        = { version = "0.5.7", path = "./crates/biome_markup" }
biome_parser        = { version = "0.5.7", path = "./crates/biome_parser" }
biome_project       = { version = "0.5.7", path = "./crates/biome_project" }
biome_rowan         = { version = "0.5.7", path = "./crates/biome_rowan" }
biome_string_case   = { version = "0.5.7", path = "./crates/biome_string_case" }
biome_suppression   = { version = "0.5.7", path = "./crates/biome_suppression" }
biome_text_edit     = { version = "0.5.7", path = "./crates/biome_text_edit" }
biome_text_size     = { version = "0.5.7", path = "./crates/biome_text_size" }
biome_unicode_table = { version = "0.5.7", path = "./crates/biome_unicode_table" }

# not publish
biome_cli            = { path = "./crates/biome_cli" }
biome_configuration  = { path = "./crates/biome_configuration" }
biome_flags          = { path = "./crates/biome_flags" }
biome_formatter_test = { path = "./crates/biome_formatter_test" }
biome_lsp            = { path = "./crates/biome_lsp" }
biome_migrate        = { path = "./crates/biome_migrate" }
biome_service        = { path = "./crates/biome_service" }
biome_test_utils     = { path = "./crates/biome_test_utils" }
biome_ungrammar      = { path = "./crates/biome_ungrammar" }
tests_macros         = { path = "./crates/tests_macros" }

# Crates needed in the workspace
anyhow             = "1.0.90"
bpaf               = { version = "0.9.15", features = ["derive"] }
countme            = "3.0.1"
crossbeam          = "0.8.4"
dashmap            = "6.1.0"
enumflags2         = "0.7.10"
getrandom          = "0.2.15"
globset            = "0.4.15"
ignore             = "0.4.23"
indexmap           = { version = "2.6.0", features = ["serde"] }
insta              = "1.40.0"
natord             = "1.0.9"
oxc_resolver       = "1.12.0"
proc-macro2        = "1.0.89"
quickcheck         = "1.0.3"
quickcheck_macros  = "1.0.0"
quote              = "1.0.37"
rayon              = "1.10.0"
regex              = "1.11.0"
rustc-hash         = "1.1.0"
schemars           = { version = "0.8.21", features = ["indexmap2", "smallvec"] }
serde              = { version = "1.0.210", features = ["derive"] }
serde_ini          = "0.2.0"
serde_json         = "1.0.132"
similar            = "2.6.0"
slotmap            = "1.0.7"
smallvec           = { version = "1.13.2", features = ["union", "const_new", "serde"] }
syn                = "1.0.109"
termcolor          = "1.4.1"
tokio              = "1.40.0"
tracing            = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = "0.3.18"
unicode-bom        = "2.0.3"
unicode-width      = "0.1.12"
[profile.dev.package.biome_wasm]
debug     = true
opt-level = "s"

[profile.test.package.biome_wasm]
debug     = true
opt-level = "s"

[profile.release.package.biome_wasm]
debug     = false
opt-level = 3

#[patch.crates-io]
#grit-pattern-matcher = { path = "../gritql/crates/grit-pattern-matcher" }
#grit-util            = { path = "../gritql/crates/grit-util" }
