[package]
authors.workspace    = true
categories.workspace = true
description          = "Biome's analyzer shared infrastructure"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_analyze"
repository.workspace = true
version              = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_console     = { workspace = true }
biome_diagnostics = { workspace = true }
biome_rowan       = { workspace = true }
bitflags          = { workspace = true }
rustc-hash        = { workspace = true }
schemars          = { workspace = true, optional = true }
serde             = { workspace = true, features = ["derive"] }
tracing           = { workspace = true }


[features]
serde = ["schemars"]

[lints]
workspace = true
