[package]
authors.workspace    = true
categories.workspace = true
description          = "Biome's analyzer shared infrastructure"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "biome_analyze"
repository.workspace = true
version              = "0.5.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biome_console            = { workspace = true }
biome_deserialize        = { workspace = true, optional = true }
biome_deserialize_macros = { workspace = true, optional = true }
biome_diagnostics        = { workspace = true }
biome_parser             = { workspace = true }
biome_rowan              = { workspace = true }
biome_suppression        = { workspace = true }
camino                   = { workspace = true }
enumflags2               = { workspace = true }
indexmap                 = { workspace = true }
rustc-hash               = { workspace = true }
schemars                 = { workspace = true, optional = true }
serde                    = { workspace = true, features = ["derive"], optional = true }
tracing                  = { workspace = true }

[features]
schema = ["dep:schemars", "biome_console/schema", "serde"]
serde  = ["dep:serde", "dep:biome_deserialize", "dep:biome_deserialize_macros"]

[lints]
workspace = true
